--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,7 @@
         <div class="ui-right" id="rightBox"></div>
     </div>
 
+    <script src="ZeroClipboard/ZeroClipboard.min.js"></script>
     <script src="js/index.js"></script>
 
 </body>
